kubernetes/security/network-policies/allow-ingress.yaml
# Permitir trafico al puerto 5000 de la app desde:
# - NGINX ingress controller (namespace ingress-nginx)
# - Prometheus (namespace observability) para scrape de /metrics
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-app-ingress
  namespace: mobilebank-staging
spec:
  podSelector:
    matchLabels:
      app: mobilebank-api
  policyTypes: [Ingress]
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: observability
      ports:
        - protocol: TCP
          port: 5000
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-app-ingress
  namespace: mobilebank-production
spec:
  podSelector:
    matchLabels:
      app: mobilebank-api
  policyTypes: [Ingress]
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: observability
      ports:
        - protocol: TCP
          port: 5000
